[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/objects/carrot.png" type="Texture" id=1]
[ext_resource path="res://scripts/objects/carrot.gd" type="Script" id=2]
[ext_resource path="res://scenes/management/hit.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 51.0

[node name="Carrot" type="KinematicBody2D"]
rotation = 0.58942
scale = Vector2( 0.719722, 0.751666 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
speed = 70
desapear = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ColectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColectArea"]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="ColectArea" to="." method="on_ColectArea_body_entered"]
[connection signal="body_exited" from="ColectArea" to="." method="on_ColectArea_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="on_body_exited"]
